[gd_scene load_steps=11 format=3 uid="uid://dqn535vsiwduy"]

[ext_resource type="Texture2D" uid="uid://crfqo1cexjslj" path="res://wmremove-transformed.png" id="1_lti8b"]
[ext_resource type="Script" uid="uid://dodgyffkdfcew" path="res://menu.gd" id="1_mae5d"]
[ext_resource type="FontFile" uid="uid://dqmin8hus2g7y" path="res://AtariSmall.ttf" id="2_ouk20"]
[ext_resource type="AudioStream" uid="uid://b413xx0ooqgyb" path="res://Secret activation.mp3" id="4_4hy44"]
[ext_resource type="AudioStream" uid="uid://b7k1iq37sf3ed" path="res://MenuMusic.mp3" id="5_ytr4m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ouk20"]
texture = ExtResource("1_lti8b")
modulate_color = Color(0.517184, 0.517184, 0.517184, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouk20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouk20"]
bg_color = Color(0.54099, 0.54099, 0.54099, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mae5d"]
bg_color = Color(0.273873, 0.273873, 0.273873, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsb4k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mae5d")

[node name="Menu_Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ouk20")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.5
offset_top = 132.0
offset_right = 83.5
offset_bottom = 240.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_ouk20")
theme_override_font_sizes/font_size = 60
text = "PONGZADA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -47.0
offset_right = 184.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/hover = SubResource("StyleBoxFlat_ouk20")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/normal = SubResource("StyleBoxFlat_vsb4k")
text = "Start"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/hover = SubResource("StyleBoxFlat_ouk20")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/normal = SubResource("StyleBoxFlat_vsb4k")
text = "How to Play"

[node name="Button3" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/hover = SubResource("StyleBoxFlat_ouk20")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/normal = SubResource("StyleBoxFlat_vsb4k")
text = "Test your Might"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 571.0
offset_right = 120.0
offset_bottom = 679.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_ouk20")
theme_override_font_sizes/font_size = 10
text = "Tip: Try konami"
horizontal_alignment = 1
vertical_alignment = 1

[node name="secretActivation" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4hy44")

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ytr4m")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_secret_pressed"]
